force-app/main/default/objects/Court_Hearing__c/Court_Hearing__c.object-meta.xml
<CustomObject>
    <label>Court Hearing</label>
    <nameField>
        <label>Court Hearing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Court Hearings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>