force-app/main/default/objects/Court_Hearing__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ps__Case__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Investigation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Court Hearings</relationshipLabel>
    <relationshipName>Court_Hearings</relationshipName>
    <type>Lookup</type>
</CustomField>