force-app/main/default/objects/Court_Hearing__c/fields/Notification_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for checking whether notification email has been sent to Benefit Case Party Relationships associated to the Ongoing_Case__c of the Court Hearing</description>
    <label>Notification Email Sent</label>
    <type>Checkbox</type>
</CustomField>