force-app/main/default/objects/Court_Hearing__c/fields/Ongoing_Case__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ongoing Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ps__Case__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Child Welfare</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Court Hearings (Ongoing Case)</relationshipLabel>
    <relationshipName>Ongoing_Case</relationshipName>
    <type>Lookup</type>
</CustomField>